--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </nav>
 
         <br>
-        <label for="colour-select">好きな色を選んでください：</label>
-        <select id="colour-select">
-            <option value="黒">黒</option>
-            <option value="白">白</option>
-            <option value="オレンジ">オレンジ</option>
+        <label for="food-select">好きなアイスを選んでください：</label>
+        <select id="food-select">
+            <option value="チョコレートアイス">チョコレートアイス</option>
+            <option value="バニラアイス">バニラアイス</option>
+            <option value="抹茶アイス">抹茶アイス</option>
         </select>
         <br>
-        <label for="number-input">好きな数字を選んでください（0、1、2）※半角数値で入力：</label>
-        <input type="number" id="number-input">
+        <label for="colour-input">好きな色を選んでください（0、1、2）※半角数値で入力：</label>
+        <input type="colour" id="colour-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
         <p id="result-output"></p>
