--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <option value="抹茶アイス">抹茶アイス</option>
         </select>
         <br>
-        <label for="colour-input">好きな色を選んでください（0、1、2）※半角数値で入力：</label>
+        <label for="colour-input">好きな色を選んでください（赤、青、黄色）：</label>
         <input type="colour" id="colour-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
