--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <option value="抹茶アイス">抹茶アイス</option>
         </select>
         <br>
-        <label for="colour-input">好きな色を選んでください（赤、青、黄色）：</label>
-        <input type="colour" id="colour-input">
+        <label for="number-input">好きな数字を選んでください（1、2、3）：</label>
+        <input type="number" id="colour-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
         <p id="result-output"></p>
