--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </nav>
 
         <br>
-        <label for="food-select">好きなアイスを選んでください：</label>
+        <label for="food-select">好きな食べ物を選んでください：</label>
         <select id="food-select">
             <option value="チョコレートアイス">チョコレートアイス</option>
             <option value="バニラアイス">バニラアイス</option>
             <option value="抹茶アイス">抹茶アイス</option>
         </select>
         <br>
-        <label for="number-input">好きな数字を選んでください（1、2、3）：</label>
-        <input type="number" id="colour-input">
+        <label for="number-input">好きな数字を選んでください（1、2、3）※半角数値で入力：</label>
+        <input type="number" id="number-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
         <p id="result-output"></p>
