--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <br>
         <label for="food-select">好きなアイスを選んでください：</label>
         <select id="food-select">
-            <option value="チョコレートアイス">チョコレートアイス</option>
-            <option value="バニラアイス">バニラアイス</option>
-            <option value="抹茶アイス">抹茶アイス</option>
+            <option value="キャラメルリボン">キャラメルリボン</option>
+            <option value="コットンキャンディ">コットンキャンディ</option>
+            <option value="いちごみるく">いちごみるく</option>
+            <option value="ポッピングシャワー">ポッピングシャワー</option>
         </select>
         <br>
         <label for="number-input">好きな数字を選んでください（1、2、3、4）※半角数値で入力：</label>
