--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
 
         <br>
-        <label for="food-select">好きなアイスを選んでください：</label>
-        <select id="food-select">
+        <label for="ice-select">好きなアイスを選んでください：</label>
+        <select id="ice-select">
             <option value="キャラメルリボン">キャラメルリボン</option>
             <option value="コットンキャンディ">コットンキャンディ</option>
             <option value="いちごみるく">いちごみるく</option>
