--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <label for="ice-select">好きなアイスを選んでください：</label>
         <select id="ice-select">
-            <option value="キャラメルリボン">キャラメルリボン</option>
+            <option value="チョコレートアイス">チョコレートアイス</option>
             <option value="コットンキャンディ">コットンキャンディ</option>
             <option value="いちごみるく">いちごみるく</option>
             <option value="ポッピングシャワー">ポッピングシャワー</option>
