--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <label for="ice-select">好きなアイスを選んでください：</label>
         <select id="ice-select">
             <option value="チョコレートアイス">チョコレートアイス</option>
-            <option value="コットンキャンディ">コットンキャンディ</option>
-            <option value="いちごみるく">いちごみるく</option>
-            <option value="ポッピングシャワー">ポッピングシャワー</option>
+            <option value="バニラアイス">バニラアイス</option>
+            <option value="ストロベリーアイス">ストロベリーアイス</option>
+            <option value="ブルーベリーアイス">ブルーベリーアイス</option>
         </select>
         <br>
         <label for="number-input">好きな数字を選んでください（1、2、3、4）※半角数値で入力：</label>
