--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
 
         <br>
-        <label for="ice-select">好きなアイスを選んでください：</label>
-        <select id="ice-select">
+        <label for="food-select">好きなアイスを選んでください：</label>
+        <select id="food-select">
             <option value="チョコレートアイス">チョコレートアイス</option>
             <option value="バニラアイス">バニラアイス</option>
             <option value="ストロベリーアイス">ストロベリーアイス</option>
