--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <option value="ブルーベリーアイス">ブルーベリーアイス</option>
         </select>
         <br>
-        <label for="number-input">好きな数字を選んでください（1、2、3、4）※半角数値で入力：</label>
+        <label for="number-input">好きな数字を選んでください（1、2、3）※半角数値で入力：</label>
         <input type="number" id="number-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
