--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </nav>
 
         <br>
-        <label for="food-select">好きな食べ物を選んでください：</label>
+        <label for="food-select">好きな色を選んでください：</label>
         <select id="food-select">
             <option value="チョコレートアイス">チョコレートアイス</option>
-            <option value="ストロベリーアイス">ストロベリーアイス</option>
+            <option value="バニラアイス">バニラアイス</option>
             <option value="ブルーベリーアイス">ブルーベリーアイス</option>
         </select>
         <br>
-        <label for="number-input">好きな数字を選んでください（1、2、3）※半角数値で入力：</label>
+        <label for="number-input">好きな数字を選んでください（0、1、2）※半角数値で入力：</label>
         <input type="number" id="number-input">
         <br>
         <button onclick="checkFortune()">運勢をチェック</button>
