--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
         <br>
-        <label for="food-select">好きな色を選んでください：</label>
+        <label for="food-select">好きな食べ物を選んでください：</label>
         <select id="food-select">
             <option value="チョコレートアイス">チョコレートアイス</option>
             <option value="バニラアイス">バニラアイス</option>
