--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="number-input">好きな数字を選んでください（1、2、3）※半角数値で入力：</label>
         <input type="number" id="number-input">
         <br>
-        <button onclick="checkFortune()">運勢をチェック</button>
+        <button onclick="checkFortune()">おすすめ</button>
         <p id="result-output"></p>
         
     <nav>
